--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=EmptyClass
-spring.datasource.url=jdbc:mysql://localhost:3306/telusko
+spring.datasource.url=jdbc:mysql://localhost:3306/empty_class
 spring.datasource.username=root
 spring.datasource.password=Sam@2006
 
